# pomodoro-notify

./: Cargo.toml  LICENSE  README.md
src/: cmd.rs  main.rs  notify.rs
